fixing white space issue after aos

--- a/css/styles.css
+++ b/css/styles.css
@@ -1166,6 +1166,12 @@ a {
   margin-top: 4rem;
 }
 
+@media screen and (min-width: 1024px) {
+  .features__block {
+    margin-top: 10rem;
+  }
+}
+
 /* Callout block */
 
 .callout_block {
@@ -1180,9 +1186,6 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
-  .features__block {
-    margin-top: 10rem;
-  }
   .callout_block {
     top: -8rem;
     padding: 0 20rem;
